# n-partition

./: .gitignore  README.md  requirements.txt  results.csv
cpp/: .gitignore  CMakeLists.txt  results.csv
cpp/include/: ExperimentRunner.cpp  Partition.cpp  Partition.hpp  Partition.tpp  ReadInstances.cpp  ReadInstances.hpp
cpp/src/: generate-instances.cpp  main.cpp  simulated.cpp
instances/: balanced.txt  n_partition_instances.txt  optimal_n_partition_instances.txt  random.txt
java/src/: Main.java
java/src/experiment/: ExperimentRunner.java
java/src/partition/: LRMPartition.java  Partition.java
java/src/utils/: ExperimentMode.java  ReadInstances.java
python/: .gitignore  generate-instances.py  main.py
python/include/: partition.py  read_instances.py
results/: balanced-metaheuristics.csv  balanced-metrics.csv  balanced-results.csv  metrics-balanced.csv  metrics-random.csv  metrics.csv  random-metaheuristics.csv  random-metrics.csv  random-results.csv  results-balanced.csv  results-random.csv  results.csv  simulated-metrics.txt  simulated-results.csv
utils/: generate-instances.py  generate_instances.py  graphs.py  metrics.py  optimal_m_partition_instances.py  optimal_n_partition_instances.py  run_all_graphs.py  simulated-insights.py
utils/plot/: error_over_instances.py  error_over_k.py  error_over_n.py  plot_scatter_error_vs_m_n.py  plot_scatter_error_vs_n_k.py  plot_scatter_time_vs_k_n.py  plot_scatter_time_vs_n_m.py  run_all_graphs.py  time_over_k.py  time_over_n.py
